Fix alignment bugs

--- a/src/view/styles/definitions.css
+++ b/src/view/styles/definitions.css
@@ -89,7 +89,7 @@
   bottom: 0 !important;
   right: 0 !important;
   width: 50px !important;
-  height: 100% !important;
+  height: 65% !important;
   border-radius: 0px 5px 5px 5px !important;
   content: "" !important;
   background: linear-gradient(to right, #ffffff00 0%, #76f7df 65%) !important;
